fix: 569 - to alignment issue

--- a/src/widgets/training-program/ui/training-program.module.scss
+++ b/src/widgets/training-program/ui/training-program.module.scss
@@ -1,14 +1,11 @@
 .training-program {
   gap: 100px;
-  justify-content: flex-start;
 
   .left {
     display: flex;
     flex: 1 1 55%;
     flex-direction: column;
     gap: 26px;
-
-    max-width: 55%;
 
     & span {
       font-weight: $font-weight-bold;
